сделал input для каждого dialogs

--- a/src/component/network/Dialogs/Dialogs.module.css
+++ b/src/component/network/Dialogs/Dialogs.module.css
@@ -14,6 +14,13 @@
     color: gold;
 }
 
-.messages {
+.message  {
+    width: 10%;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
     padding: 10px;
+}
+.message input{
+    width: 400px;
 }
