--- a/src/component/network/Profile/MyPosts/MyPost.module.css
+++ b/src/component/network/Profile/MyPosts/MyPost.module.css
@@ -9,7 +9,7 @@
 .my_post input{
     width: 50%;
     border-radius: 5px;
-    background-color: lightgray;
+    background-color: rgb(255, 254, 254);
     padding: 20px;
 }
 
